[package]
name = "minecraft-launcher-core"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.75"
chrono = { version = "0.4.31", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
os_info = "3.7.0"
regex = "1.10.2"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v3"] }
zip = "2.1.3"
libflate = "2.0.0"
derive_builder = "0.20.0"
anyhow = "1.0.78"
base64 = "0.22.1"
md-5 = "0.10.6"

[dev-dependencies]
simple_logger = { version = "5.0.0", features = ["colors"] }
